Preparing for packagist publication.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "php-imap/php-imap",
+    "name": "nand2/php-imap",
     "description": "Manage mailboxes, filter/get/delete emails in PHP (supports IMAP/POP3/NNTP)",
     "keywords": [
         "PHP",
@@ -9,7 +9,7 @@
         "mailbox",
         "receive emails"
     ],
-    "homepage": "https://github.com/barbushin/php-imap",
+    "homepage": "https://github.com/nand2/php-imap",
     "license": "MIT",
     "type": "library",
     "authors": [
